ensure buttons don't touch on mobile

--- a/input/custom.css
+++ b/input/custom.css
@@ -112,7 +112,7 @@ summary:after {
   border-radius: 50%;
   content: '+';
   outline: var(--text-color) solid 1px;
-  outline-offset: -0.1em;
+  outline-offset: -2px;
   color: var(--text-color);
   vertical-align: middle;
   padding: 0;
@@ -195,11 +195,6 @@ header {
   }
   header .active > a {
     color: var(--text-color);
-    font-weight: 600;
-  }
-  header .active summary:after {
-    color: var(--text-color);
-    outline: var(--text-color) solid 50px;
     font-weight: 600;
   }
   body:after {
